# visi

./: CMakeLists.txt  LICENSE
src/: main.cpp
src/com/: color_info_sorted_2d.ipp
src/dbus/: dbus_audio.cpp  dbus_metadata_picker.h
